Bug 1073809 - Allow "get" and "set" as generator names in object literals. (r=Waldo)